log-schemas/27.5/opcua_binary_browse.rst
``opcua_binary_browse`` field reference
---------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``opcua_link_id`` (string)
     - The opcua_link_id information.

   * - ``browse_service_type`` (string)
     - The browse_service_type information.

   * - ``browse_view_id_encoding_mask`` (string)
     - The browse_view_id_encoding_mask information.

   * - ``browse_view_id_namespace_idx`` (integer - count)
     - The browse_view_id_namespace_idx information.

   * - ``browse_view_id_numeric`` (integer - count)
     - The browse_view_id_numeric information.

   * - ``browse_view_id_string`` (string)
     - The browse_view_id_string information.

   * - ``browse_view_id_guid`` (string)
     - The browse_view_id_guid information.

   * - ``browse_view_id_opaque`` (string)
     - The browse_view_id_opaque information.

   * - ``browse_view_description_timestamp`` (time)
     - The browse_view_description_timestamp information.

   * - ``browse_view_description_view_version`` (integer - count)
     - The browse_view_description_view_version information.

   * - ``req_max_ref_nodes`` (integer - count)
     - The req_max_ref_nodes information.

   * - ``browse_description_link_id`` (string)
     - The browse_description_link_id information.

   * - ``browse_next_release_continuation_point`` (boolean - bool)
     - The browse_next_release_continuation_point information.

   * - ``browse_next_link_id`` (string)
     - The browse_next_link_id information.

   * - ``browse_response_link_id`` (string)
     - The browse_response_link_id information.

   * - ``browse_diag_info_link_id`` (string)
     - The browse_diag_info_link_id information.
